[package]
edition = "2018"
name = "beam_file"
version = "0.3.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Library for processing Erlang BEAM file"
homepage = "https://github.com/sile/beam_file"
repository = "https://github.com/sile/beam_file"
readme = "README.md"
keywords = ["erlang", "beam"]
license = "MIT"

[badges]
coveralls = {repository = "sile/beam_file"}

[dependencies]
thiserror = "^1"
byteorder = "1.2"
libflate = "^1"
